@@ -804,86 +804,6 @@ class AuthManagerTest extends MediaWikiIntegrationTestCase {
 		];
 	}
 
-	public function testForcePrimaryAuthenticationProviders() {
-		$mockA = $this->createMock( AbstractPrimaryAuthenticationProvider::class );
-		$mockB = $this->createMock( AbstractPrimaryAuthenticationProvider::class );
-		$mockB2 = $this->createMock( AbstractPrimaryAuthenticationProvider::class );
-		$mockA->method( 'getUniqueId' )->willReturn( 'A' );
-		$mockB->method( 'getUniqueId' )->willReturn( 'B' );
-		$mockB2->method( 'getUniqueId' )->willReturn( 'B' );
-		$this->primaryauthMocks = [ $mockA ];
-
-		$this->logger = new TestLogger( true );
-
-		// Test without first initializing the configured providers
-		$this->initializeManager();
-		$this->expectDeprecationAndContinue( '/AuthManager::forcePrimaryAuthenticationProviders/' );
-		$this->manager->forcePrimaryAuthenticationProviders( [ $mockB ], 'testing' );
-		$this->assertSame(
-			[ 'B' => $mockB ], $this->managerPriv->getPrimaryAuthenticationProviders()
-		);
-		$this->assertSame( null, $this->managerPriv->getAuthenticationProvider( 'A' ) );
-		$this->assertSame( $mockB, $this->managerPriv->getAuthenticationProvider( 'B' ) );
-		$this->assertSame( [
-			[ LogLevel::WARNING, 'Overriding AuthManager primary authn because testing' ],
-		], $this->logger->getBuffer() );
-		$this->logger->clearBuffer();
-
-		// Test with first initializing the configured providers
-		$this->initializeManager();
-		$this->assertSame( $mockA, $this->managerPriv->getAuthenticationProvider( 'A' ) );
-		$this->assertSame( null, $this->managerPriv->getAuthenticationProvider( 'B' ) );
-		$this->request->getSession()->setSecret( AuthManager::AUTHN_STATE, 'test' );
-		$this->request->getSession()->setSecret( AuthManager::ACCOUNT_CREATION_STATE, 'test' );
-		$this->expectDeprecationAndContinue( '/AuthManager::forcePrimaryAuthenticationProviders/' );
-		$this->manager->forcePrimaryAuthenticationProviders( [ $mockB ], 'testing' );
-		$this->assertSame(
-			[ 'B' => $mockB ], $this->managerPriv->getPrimaryAuthenticationProviders()
-		);
-		$this->assertSame( null, $this->managerPriv->getAuthenticationProvider( 'A' ) );
-		$this->assertSame( $mockB, $this->managerPriv->getAuthenticationProvider( 'B' ) );
-		$this->assertNull( $this->request->getSession()->getSecret( AuthManager::AUTHN_STATE ) );
-		$this->assertNull(
-			$this->request->getSession()->getSecret( AuthManager::ACCOUNT_CREATION_STATE )
-		);
-		$this->assertSame( [
-			[ LogLevel::WARNING, 'Overriding AuthManager primary authn because testing' ],
-			[
-				LogLevel::WARNING,
-				'PrimaryAuthenticationProviders have already been accessed! I hope nothing breaks.'
-			],
-		], $this->logger->getBuffer() );
-		$this->logger->clearBuffer();
-
-		// Test duplicate IDs
-		$this->initializeManager();
-		try {
-			$this->expectDeprecationAndContinue( '/AuthManager::forcePrimaryAuthenticationProviders/' );
-			$this->manager->forcePrimaryAuthenticationProviders( [ $mockB, $mockB2 ], 'testing' );
-			$this->fail( 'Expected exception not thrown' );
-		} catch ( RuntimeException $ex ) {
-			$class1 = get_class( $mockB );
-			$class2 = get_class( $mockB2 );
-			$this->assertSame(
-				"Duplicate specifications for id B (classes $class2 and $class1)", $ex->getMessage()
-			);
-		}
-
-		// Wrong classes
-		$mock = $this->getMockForAbstractClass( AuthenticationProvider::class );
-		$mock->method( 'getUniqueId' )->willReturn( 'X' );
-		$class = get_class( $mock );
-		try {
-			$this->manager->forcePrimaryAuthenticationProviders( [ $mock ], 'testing' );
-			$this->fail( 'Expected exception not thrown' );
-		} catch ( RuntimeException $ex ) {
-			$this->assertSame(
-				"Expected instance of MediaWiki\\Auth\\AbstractPrimaryAuthenticationProvider, got $class",
-				$ex->getMessage()
-			);
-		}
-	}
-
 	public function testBeginAuthentication() {
 		$this->initializeManager();
 
